cambio metodos de recital